[package]
name = "khyber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64ct = { version = "1.8.3", features = ["alloc"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4", features = ["derive"] }
getrandom = "0.4.2"
ml-kem = { version = "0.3.2", features = ["getrandom", "zeroize"] }
zeroize = "1"
rand = "0.10.1"
kaem-sdk = { version = "0.0.3" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }